2007-05-16  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.15 TAGGED FOR RELEASE ***

2007-05-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclNamesp.c:	Plugged memory leak related to 
	[namespace delete ::]. [Bug 1716782]

	* changes: updates for 8.4.15 release.

	* win/tclWinReg.c:		Bump to registry 1.1.5 to account
	* library/reg/pkgIndex.tcl:	for [1682211] bug fix.

2007-05-10  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclInt.h:     TclFinalizeThreadAlloc() is always defined,
	so make sure it is also always declared.

	[Tcl Bug 1706140]

	* generic/tclCmdMZ.c (Trace*Proc):	Update Tcl_VarTraceProcs so
	* generic/tclLink.c (LinkTraceProc):    that they call
	* generic/tclUtil.c (TclPrecTraceProc): Tcl_InterpDeleted() for
	themselves, and do not rely on (frequently buggy) setting of the
	TCL_INTERP_DESTROYED flag by the trace core.

	* generic/tclVar.c:     Update callers of CallVarTraces to not
	pass in the TCL_INTERP_DESTROYED flag.  Also apply filters so that
	public routines only pass documented flag values down to lower level
	routines.

	* generic/tclVar.c (CallVarTraces):        The setting of the
	TCL_INTERP_DESTROYED flag is now done entirely within the
	CallVarTraces routine, the only place it can be done right.

2007-04-30  Daniel Steffen  <das@users.sourceforge.net>

	* unix/Makefile.in: add 'tclsh' dependency to install targets that rely
	on tclsh, fixes parallel 'make install' from empty build dir.

2007-04-29  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tclUnixFCmd.c: add workaround for crashing bug in fts_open()
	* unix/tclUnixInit.c: without FTS_NOSTAT on 64bit Darwin 8 or earlier.

	* unix/tclLoadDyld.c (TclpLoadMemory): fix (void*) arithmetic.

	* macosx/tclMacOSXNotify.c:	fix warnings.

	* macosx/README:		sync whitespace/formatting with HEAD.
	* macosx/tclMacOSXBundle.c:
	* macosx/tclMacOSXNotify.c:
	* unix/tclLoadDyld.c:

	* macosx/Makefile:		fix/add copyright and license refs.
	* macosx/tclMacOSXBundle.c: